# schedule-maker

./: LICENSE  almost_orm.py  app.py  db.py
mariia/: genetic_algorithm.py
solvers/: mapper.py  solver.py
solvers/csp/: csp.py  heuristics.py  main.py
solvers/mariia/: genetic_algorithm.py  main.py
solvers/stasian/: CMakeLists.txt  Makefile  a.out  genetic.h  input.dummy.txt  input.txt  main.cpp  output.txt  requirements.h
templates/: admin.html  index.html  schedule.html
views/: __init__.py  admin.py  schedule.py
